# Custom-Spellcheck

./: README.md  custom_spellcheck.py  pyproject.toml  test_script.py
tests/: test_custom_spellcheck.py
