[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-spellcheck"
version = "0.1.0"
description = "Dictionary-based spell checking utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools]
py-modules = ["custom_spellcheck"]
